#107 Replace test or hard-coded occurrences of Arrays.asList() with List.of() (#128)
* #104 Create PushStateResourceResolverTest.java

* #107 Replace test or hard-coded occurrences of Arrays.asList() with List.of()

* #113 Add appropriate logging for cache job runner

* Pull latest changes from React patch (#129)

* Bump org.apache.maven.plugins:maven-surefire-plugin from 3.5.0 to 3.5.1 (#125)

Bumps [org.apache.maven.plugins:maven-surefire-plugin](https://github.com/apache/maven-surefire) from 3.5.0 to 3.5.1.
- [Release notes](https://github.com/apache/maven-surefire/releases)
- [Commits](https://github.com/apache/maven-surefire/compare/surefire-3.5.0...surefire-3.5.1)

---
updated-dependencies:
- dependency-name: org.apache.maven.plugins:maven-surefire-plugin
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump software.amazon.awssdk:aws-sdk-java from 2.28.11 to 2.28.16 (#126)

Bumps software.amazon.awssdk:aws-sdk-java from 2.28.11 to 2.28.16.

---
updated-dependencies:
- dependency-name: software.amazon.awssdk:aws-sdk-java
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump org.apache.maven.plugins:maven-resources-plugin from 3.1.0 to 3.3.1 (#124)

Bumps [org.apache.maven.plugins:maven-resources-plugin](https://github.com/apache/maven-resources-plugin) from 3.1.0 to 3.3.1.
- [Release notes](https://github.com/apache/maven-resources-plugin/releases)
- [Commits](https://github.com/apache/maven-resources-plugin/compare/maven-resources-plugin-3.1.0...maven-resources-plugin-3.3.1)

---
updated-dependencies:
- dependency-name: org.apache.maven.plugins:maven-resources-plugin
  